Fix exercises not showing up

--- a/Frontend/src/pages/SurveySelector.css
+++ b/Frontend/src/pages/SurveySelector.css
@@ -52,6 +52,12 @@
   align-items: center;
   justify-content: center;
   font-size: 3rem;
+  color: white;
+}
+
+.album-art svg {
+  width: 60%;
+  height: 60%;
 }
 
 .song-title {
